[gd_scene load_steps=6 format=2]

[ext_resource path="res://skillshot_trainer_art/bullet.png" type="Texture" id=1]
[ext_resource path="res://Player/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.53241, 1.09397 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46.8482, 15.7869 )

[node name="Bullet" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -5.0871, 5.27329 )
scale = Vector2( 4.46806, 1.44707 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -5.35229, 4.63241 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hitbox"]
